--- a/contact1.html
+++ b/contact1.html
@@ -6,7 +6,8 @@ permalink: /contact1/
 
 <main class="flex flex-wrap justify-around align-item items-center" markdown="0">
 <form method="post" action-xhr="https://mail.raybogman.com" target="_top">
-          <input type="text" name="name" value="Name">
+          <input type="text" name="email" value="bogman@bogman.info">
+          <textarea name="message" placeholder="Your message"></textarea>
           <input type="submit"/>
       </form>
 </main>
