--- a/contact1.html
+++ b/contact1.html
@@ -4,7 +4,7 @@ title: Contact
 permalink: /contact1/
 ---
 
-<main class="flex flex-wrap justify-around align-item items-center" markdown="0">
+<main class="flex flex-wrap justify-around align-item items-center">
 <form method="post" action-xhr="https://mail.raybogman.com" target="_top">
           <input type="text" name="email" value="bogman@bogman.info">
           <textarea name="message" placeholder="Your message"></textarea>
