--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ layout: default
     </figcaption>
   </figure>
 
+<script type="application/ld+json">{% include blogposting.json %}</script>
+
 <main id="content" role="main" class="content">
 
   <div class="cf frame">
