--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ layout: default
 
             <div itemprop="publisher" itemscope itemtype="http://schema.org/Organization">
               <div itemprop="logo" itemscope itemtype="https://schema.org/ImageObject">
-                   <amp-img src="{{ site.url }}/{{site.data.author["author"]["assets"]}}"></amp-img>
+                   <amp-img width="600" height="600" src="{{ site.url }}/{{site.data.author["author"]["assets"]}}"></amp-img>
                    <meta itemprop="url" content="{{ site.url }}/{{site.data.author["author"]["assets"]}}">
                    <meta itemprop="width" content="600">
                    <meta itemprop="height" content="600">
