update desc + add media link

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
         </h1>
         <h2 class="ampstart-fullpage-hero-heading mb0">
           <span class="ampstart-fullpage-hero-heading-text description">
-            {{ site.description }}
+            {{ site.intro }}
           </span>
         </h2>
     </header>
