tryout new head title + desc

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Ray Bogman - Entrepeneur, Speaker, Trainer, Author, Host & Consultant.
+description: Ray Bogman - Entrepeneur, Speaker, Trainer, Author, Host & Consultant. Hire me for an inspirational session about (mobile) performance, security and E-commerce optimization.
 ---
 
 
