--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-title: Ray Bogman - Entrepeneur, Speaker, Trainer, Author, Host & Consultant.
-description: Entrepeneur, Speaker, Trainer, Author, Host & Consultant - Senior Business Solutions Architect - Magento, An Adobe Company
+title: Ray Bogman - Entrepreneur, Speaker, Trainer, Author, Host & Consultant.
+description: Entrepreneur, Speaker, Trainer, Author, Host & Consultant - Head of Commerce, Customer Engineering - Magento, An Adobe Company
 ---
 
 
