--- a/mage2cookbook/chat.html
+++ b/mage2cookbook/chat.html
@@ -1,8 +1,16 @@
-<script src="https://cdn.jsdelivr.net/gh/logspace-ai/langflow-embedded-chat@v1.0.7/dist/build/static/js/bundle.min.js""></script>
+<html>
+<head>
+<script src="https://cdn.jsdelivr.net/gh/logspace-ai/langflow-embedded-chat@v1.0.7/dist/build/static/js/bundle.min.js""></script>  
+</head>  
+<body>
 
   <langflow-chat
-    window_title="Basic Prompting"
-    flow_id="5ae2068b-6bf3-4d69-a9a1-4f7beeaadce1"
-    host_url="https://api.langflow.astra.datastax.com/lf/3a571583-fd4f-461e-b5e6-329697d1d016/api/v1/run/5ae2068b-6bf3-4d69-a9a1-4f7beeaadce1?stream=false"
+    window_title="Q&A"
+    flow_id="a899ae93-47ec-4d49-ba9f-2de2a6864ae6"
+    host_url="http://langflow.jira.nl:7860"
+    api_key="sk-FvO8pWLLxRclJ_MUglpQDj3joMXY1XHQb7Uo77VWv-w">
+  </langflow-chat>
 
-  ></langflow-chat>
+  
+</body>
+</html>
