--- a/mage2cookbook/chat.html
+++ b/mage2cookbook/chat.html
@@ -7,7 +7,7 @@
   <langflow-chat
     window_title="Q&A"
     flow_id="a899ae93-47ec-4d49-ba9f-2de2a6864ae6"
-    host_url="http://langflow.jira.nl:7860"
+    host_url="http://langflow.raybogman.com:7860"
     api_key="sk-FvO8pWLLxRclJ_MUglpQDj3joMXY1XHQb7Uo77VWv-w">
   </langflow-chat>
 
